# netmob25-cellular-planning

./: .gitmodules  README.md
module_netmob25/: .gitignore  CLAUDE.md  README.md  export_optimal_medium_v2.py  generate_trajectories_map.py  pyproject.toml  requirements.txt  requirements_cluster.txt  run_parallel_experiments.sh  slurm_vae_lstm_pretrained.sh
module_netmob25/configs/experiment/: vae_lstm_distance_aware.yaml  vae_lstm_from_pretrained.yaml  vae_lstm_reconstruction_focused.yaml  vae_lstm_reconstruction_test.yaml
module_netmob25/configs/export/: cpp.yaml
module_netmob25/configs/sweep/: basic_grid2.yaml  comprehensive_beta_sweep.yaml
module_netmob25/configs/training/: adaptive_training.yaml  default.yaml  patient_training.yaml
module_netmob25/cpp_ns3_export/optimal_medium_v2/: CMakeLists.txt  metadata.json  netmob25-mobility-model.cc  netmob25-mobility-model.h  scalers.json
module_netmob25/cpp_ns3_export/vae_lstm_2025-07-16_12-30-52/: metadata.json  model.pt  netmob25-mobility-model.cc  netmob25-mobility-model.h  scalers.json
module_netmob25/cpp_project/: netmob25-mobility-example-v2.jinja  netmob25-mobility-example.cc.jinja  netmob25-mobility-model.cc.jinja  netmob25-mobility-model.h.jinja
module_netmob25/experiments/vae_lstm_2025-07-16_12-30-52/: best_metrics.json  config.yaml  model_info.json  training_summary.json
module_netmob25/experiments/vae_lstm_2025-07-16_12-30-52/logs/tensorboard/: hparams.yaml
module_netmob25/experiments/vae_lstm_2025-09-07_20-55-25/: best_metrics.json  config.yaml  evaluation_results.json  model_info.json
module_netmob25/experiments/vae_lstm_2025-09-07_20-55-25/logs/tensorboard/: hparams.yaml
module_netmob25/ml_mobility_ns3/export/: cpp_export.py
module_netmob25/ml_mobility_ns3/metrics/: diff_metrics.py
module_netmob25/ml_mobility_ns3/training/: distance_aware_loss.py  lightning_module.py  losses.py
module_netmob25/ml_mobility_ns3/utils/: model_utils.py
module_netmob25/notebooks/: Untitled.ipynb  Untitled.py  Untitled1.ipynb  Untitled2.ipynb  generategraph.ipynb
module_netmob25/old_cpp_export_to_test_without_ns3/: CMakeLists.txt  main.cc  model.p  trajectory_generator.cc  trajectory_generator.h
module_netmob25/scripts/: export.py  train.py
